[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["almanac.py", "moon.py", "airmass.py", "plotutils.py",
            "astropy_ESO.py", "geometry.py", "planets.py"]

[project]
name = "almanac"
version = "1.0"
dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "pytz",
  "timezonefinder"
]
requires-python = ">=3.9"
authors = [
  {name = "Wing-Fai Thi", email = "wingfai.thi@googlemail.com"},
]
description = "Astronomical Observation Tools"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Scientific data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9"
]

[project.urls]
Homepage = "https://www.astrowing.eu"
Repository = "https://github.com/wfthi/AstronomyObservationTools.git"
